--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
     "name": "dependabot-test",
     "version": "1.0.0",
-    "description": "A test project to auto-fix Dependabot issues",
+    "description": "A test project to trigger Dependabot alerts",
+    "main": "index.js",
     "dependencies": {
-      "express": "4.16.0"
+      "express": "2.5.11",
+      "lodash": "4.17.19"
+    },
+    "scripts": {
+      "start": "node index.js"
     }
   }
   
