--- a/.github/workflows/dependabot-ci.yml
+++ b/.github/workflows/dependabot-ci.yml
@@ -1,29 +1,51 @@
-name: Dependabot CI for Python
+name: Run Tests for Dependabot PRs
 
 on:
   pull_request:
     branches:
-      - main
-      - dev
-      - feature/*  # For all feature branches
+      - main  
+      
+    types:
+      - opened
+      - synchronize  
+
+permissions:
+  contents: read
+  pull-requests: write  
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
+    if: github.actor == 'dependabot[bot]' 
+
     steps:
-      - name: Checkout Code
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r app/requirements.txt
+          pip install pytest
 
       - name: Run Tests
-        run: pytest
+        id: run-tests
+        run: |
+          pytest --junitxml=results.xml || echo "Tests failed"
+
+      - name: Post Test Results to PR
+        if: always()
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            📝 **Test Results**:
+            - ✅ **All tests passed**: ${{ job.status == 'success' }}
+            - ❌ **Failures detected**: Check logs for details.
+
+            📌 View logs under **Actions → Dependabot Test Workflow**.
+          comment_tag: dependabot_tests
