--- a/.github/workflows/dependabot-ci.yml
+++ b/.github/workflows/dependabot-ci.yml
@@ -4,10 +4,9 @@ on:
   pull_request:
     branches:
       - main  
-      
     types:
       - opened
-      - synchronize  
+      - synchronize  # When Dependabot updates its PR
 
 permissions:
   contents: read
@@ -17,7 +16,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    if: github.actor == 'dependabot[bot]' 
+    if: github.actor == 'dependabot[bot]'  
 
     steps:
       - name: Checkout Repository
@@ -36,7 +35,7 @@ jobs:
       - name: Run Tests
         id: run-tests
         run: |
-          pytest --junitxml=results.xml || echo "Tests failed"
+          pytest tests --junitxml=results.xml || echo "Tests failed"
 
       - name: Post Test Results to PR
         if: always()
