Run on all branches

--- a/.github/workflows/dependabot-ci.yml
+++ b/.github/workflows/dependabot-ci.yml
@@ -3,7 +3,7 @@ name: Run Tests for Dependabot PRs
 on:
   pull_request:
     branches:
-      - *  # Run on all branches
+      - "*"  # Run on all branches
     types:
       - opened
       - synchronize  # When Dependabot updates its PR
