--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-Flask==1.1.1  # Outdated & vulnerable (Dependabot will suggest Flask>=2.0.0)
-requests==2.19.1  # Has security issues
-numpy==1.18.0  # Just an outdated package for example
-jinja2==3.1.4 
+Flask==1.1.2
+Werkzeug==1.0.1
