--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 Flask==1.1.1  # Outdated & vulnerable (Dependabot will suggest Flask>=2.0.0)
 requests==2.19.1  # Has security issues
-numpy==1.18.0  # Just an outdated package for example
+Jinja2==3.1.4  # Just an outdated package for example
