--- a/.github/workflows/dependabot-ci.yml
+++ b/.github/workflows/dependabot-ci.yml
@@ -46,7 +46,7 @@ jobs:
          
             git fetch origin
             git reset --hard origin/${{ github.head_ref }}
-            git add requirements.txt
+            git add .
             git commit -m "Auto-fix dependencies in requirements.txt"
             git push --force origin HEAD:${{ github.head_ref }}
           fi
