--- a/.github/workflows/dependabot-ci.yml
+++ b/.github/workflows/dependabot-ci.yml
@@ -72,9 +72,10 @@ jobs:
 
       - name: Run Tests
         id: run-tests
+        continue-on-error: true
         run: |
           pip install pytest 
-          pytest tests --junitxml=results.xml || echo "::error ::Some tests failed"
+          pytest tests --junitxml=results.xml && echo "status=success" >> $GITHUB_OUTPUT || echo "status=failure" >> $GITHUB_OUTPUT
 
       - name: Post Test Results to PR
         if: always()
@@ -82,8 +83,10 @@ jobs:
         with:
           message: |
             📝 **Test Results**:
-            - ✅ **All tests passed**: ${{ steps.run-tests.outcome == 'success' }}
-            - ❌ **Failures detected**: Check logs for details.
-
+            {% if steps.run-tests.outputs.status == 'success' %}
+            ✅ **All tests passed!** 🎉
+            {% else %}
+            ❌ **Some tests failed!** Please check the logs for details.
             📌 View logs under **Actions → PR Test Workflow**.
+            {% endif %}
           comment_tag: dependabot_tests
