--- a/.github/workflows/dependabot-ci.yml
+++ b/.github/workflows/dependabot-ci.yml
@@ -70,14 +70,42 @@ jobs:
             ```
           comment_tag: dependabot_fix_summary
 
+      # - name: Run Tests
+      #   id: run-tests
+      #   run: |
+      #     pip install pytest 
+      #     pytest tests --junitxml=results.xml || echo "::error ::Some tests failed"
+
+      # - name: Post Test Results (Failure)
+      #   if: failure()
+      #   uses: thollander/actions-comment-pull-request@v2
+      #   with:
+      #     message: |
+      #       📝 **Test Results**:
+      #       - ❌ **Failures detected**: Check logs for details.
+
+      #       📌 View logs under **Actions → PR Test Workflow**.
+      #     comment_tag: dependabot_tests
+
+      # - name: Post Test Results (Success)
+      #   if: success()
+      #   uses: thollander/actions-comment-pull-request@v2
+      #   with:
+      #     message: |
+      #       📝 **Test Results**:
+      #       - ✅ **All tests passed**.
+
+      #       📌 View logs under **Actions → PR Test Workflow**.
+      #     comment_tag: dependabot_tests
+
       - name: Run Tests
         id: run-tests
         run: |
           pip install pytest 
-          pytest tests --junitxml=results.xml || echo "::error ::Some tests failed"
+          pytest tests --junitxml=results.xml || echo "TEST_FAILED=true" >> $GITHUB_ENV
 
       - name: Post Test Results (Failure)
-        if: failure()
+        if: env.TEST_FAILED == 'true'
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
@@ -88,7 +116,7 @@ jobs:
           comment_tag: dependabot_tests
 
       - name: Post Test Results (Success)
-        if: success()
+        if: env.TEST_FAILED != 'true'
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
@@ -97,4 +125,5 @@ jobs:
 
             📌 View logs under **Actions → PR Test Workflow**.
           comment_tag: dependabot_tests
+
 
